Blog fix on iOS resolution maybe

--- a/style.css
+++ b/style.css
@@ -980,7 +980,7 @@ footer .ss-icon:hover {
   }
 
   .post {
-    width: 360px;
+    width: 90%;
   }
 
   #all-posts {
